# Unidb

./: .gitignore  CMakeLists.txt  Config.cmake.in  README  README.md  README.zh_CN  README.zh_CN.md  db_structure_definition.md
cmake/: version.hpp.in
include/: unidb.cpp  unidb.hpp  unidb_exception.hpp  unidb_private.hpp
src/: unidb.cpp  unidb_db.cpp  unidb_delta.cpp  unidb_object.cpp  unidb_typesystem.cpp
tests/: test.cpp
